# SQL_05

./: .gitignore
SQL_05/: CMakeLists.txt  add_clients_batch.cpp  add_clients_batch.h  attribute.h  check_phone_number.cpp  check_phone_number.h  clients_package.h  connection_info.h  consts.h  csv_parser.h  db_manager.cpp  db_manager.h  empty_value_exception.h  good_clients_batch.csv  insert_exception_structure.h  log_event.cpp  log_event.h  main.cpp  pick_attribute.cpp  pick_attribute.h  print_clients_package.cpp  print_clients_package.h  setup_connection.cpp  wrong_clients_batch.csv
SQL_05/input_data/: good_clients_batch.csv
